{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 0,
  "lineage": "5aadff61-50e9-8f02-7d87-6367152224e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_09a9ebbab5713c545",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:internet-gateway/igw-09a9ebbab5713c545",
            "id": "igw-09a9ebbab5713c545",
            "owner_id": "891377251704",
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_0665545cbc2874491",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:route-table/rtb-0665545cbc2874491",
            "id": "rtb-0665545cbc2874491",
            "owner_id": "891377251704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a9ebbab5713c545",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567",
            "aws_internet_gateway.igw_09a9ebbab5713c545"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_0afe7c1446fcc470a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:security-group/sg-0afe7c1446fcc470a",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afe7c1446fcc470a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377251704",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_05c3d9e8466ca604b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-05c3d9e8466ca604b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c3d9e8466ca604b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_09cc81b3a55da338e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-09cc81b3a55da338e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cc81b3a55da338e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0a5f1124c803cdd79",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-0a5f1124c803cdd79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5f1124c803cdd79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0a6dcbb934f38f29e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-0a6dcbb934f38f29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6dcbb934f38f29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0d8877a4c4998aad1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-0d8877a4c4998aad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8877a4c4998aad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0dc20f7133e0742fd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:subnet/subnet-0dc20f7133e0742fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc20f7133e0742fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377251704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eae3e3dde1b92567"
          },
          "dependencies": [
            "aws_vpc.vpc_0eae3e3dde1b92567"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_0eae3e3dde1b92567",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377251704:vpc/vpc-0eae3e3dde1b92567",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01b7430f86a10aed4",
            "default_route_table_id": "rtb-0665545cbc2874491",
            "default_security_group_id": "sg-0afe7c1446fcc470a",
            "dhcp_options_id": "dopt-0a3337ef07096efe3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eae3e3dde1b92567",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0665545cbc2874491",
            "owner_id": "891377251704"
          }
        }
      ]
    }
  ]
}